# single_node_dw

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  README_MAGE.md  docker-compose.yml  mkdocs.yml  pyproject.toml  test_config.json
docs/: azure-etl-framework-prompts.md  index.md  next-steps.md
docs/guides/: mage-orchestration.md  new-connector.md  pipeline.md
docs/setup/: architecture.md  installation.md
docs/site/: 404.html  index.html
docs/site/next-steps/: index.html
docs/site/search/: search_index.json
etl/: __init__.py  cli.py  requirements.txt
etl/connections/: README.md  __init__.py  _config.py  _engine_cache.py  _logging.py  _session_cache.py  dw_destination.py
etl/connections/examples/: amqp_connector.example.json  amqp_connector.example.yaml  ftp_connector.example.json  ftp_connector.example.yaml  (+26 more)
etl/pipeline/: runner.py
etl/staging/: __init__.py  audit.py  dw_schema.py  loader.py  writer.py
examples/: incremental_postgres_to_dw.py  postgres_to_dw.py  rest_api_to_dw.py
infra/: aws.tf  azure.tf  outputs.tf  providers.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
mage_blocks/custom/: etl_runner.py
mage_blocks/data_exporters/: etl_dw_loader.py  etl_full_pipeline.py
mage_blocks/data_loaders/: etl_source_extractor.py
mage_templates/configs/: mongodb_source.json  postgres_source.json  rest_api_source.json
mage_templates/pipelines/: full_pipeline_block.py  simple_etl_pipeline.py
tests/: test_cli.py  test_connections.py  test_pipeline.py  test_staging.py
tests/integration/: test_mage_integration.py
(+53 files in other folders)
