[project]
name = "single-node-dw"
version = "0.1.0"
description = "Framework de Data Warehouse Single-Node para ETL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0",
  "PyYAML>=6.0.2",
  "polars>=1.10.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "pyodbc>=5.1.0",
  "oracledb>=2.2.0",
  "requests>=2.32.0",
  "httpx>=0.27.0",
  "paramiko>=3.4.0",
  "cassandra-driver>=3.29.0",
  "neo4j>=5.28.0",
  "pymongo>=4.8.0",
  "confluent-kafka>=2.6.0",
  "pika>=1.3.2",
  "nats-py>=2.9.0",
  "gspread>=6.1.2",
  "zeep>=4.3.1",
  "webdavclient3>=3.14.6",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "mkdocs>=1.6.0,<2.0",
  "mkdocs-material>=9.5.0,<9.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "etl"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"